gitops/radarr-no4k/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-no4k
  labels:
    app: radarr-no4k
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr-no4k
  template:
    metadata:
      labels:
        app: radarr-no4k
    spec:
      containers:
      - name: radarr-no4k
        image: ghcr.io/linuxserver/radarr:6.3.0-develop
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: radarr-no4k-config
          mountPath: /config
        - name: data
          mountPath: /data
      volumes:
      - name: radarr-no4k-config
        persistentVolumeClaim:
          claimName: radarr-no4k-config
      - name: data
        hostPath:
          path: /data
          type: Directory
