gitops/radarr-no4k/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-no4k
  namespace: radarr-no4k
spec:
  parentRefs:
  - name: main
    namespace: cilium-gateway
    sectionName: https-radarr-no4k
  hostnames:
  - radarr-no4k.sync.lt
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: radarr-no4k
      port: 80
